@@ -441,6 +441,7 @@ class navigator:
 
 
     def log_functions(self):
+        self.addDirectoryItem('[B]TheOath[/B] : View Log', 'viewLog', 'tools.png', 'DefaultAddonProgram.png', isFolder=False)
         self.addDirectoryItem('[B]TheOath[/B] : Upload Log to hastebin', 'uploadLog', 'tools.png', 'DefaultAddonProgram.png', isFolder=False)
         self.addDirectoryItem('[B]TheOath[/B] : Empty Log', 'emptyLog', 'tools.png', 'DefaultAddonProgram.png', isFolder=False)
 
